[tool.poetry]
name = "discord-bot-template"
version = "0.1.0"
description = ""
authors = ["Alex Oladele <dragid10@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
aiodns = "^3.0.0"
brotlipy = "^0.7.0"
cchardet = "^2.1.7"
discord-ext-ui = "^3.1.9"
loguru = "^0.6.0"
orjson = "^3.6.8"
py-cord = {extras = ["speed"], version = "^2.0.0-beta.7"}
python-decouple = "^3.6"
python-dotenv = "^0.20.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
icecream = "^2.1.2"
mockito = "^1.3.0"
pytest = "^7.1.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
